--- a/2024_01/RooFit/ROOTnoColab_Aula04Data2024_01_Exemplos5.ipynb
+++ b/2024_01/RooFit/ROOTnoColab_Aula04Data2024_01_Exemplos5.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUBu7hgyLBq6XSi+mvjrNx",
+      "authorship_tag": "ABX9TyPv/O6whX6nxTQj7jZNX/Nv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5068,7 +5068,7 @@
         },
         "outputId": "a5ce5316-ea3e-4e05-95a5-1ef919374512"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5133,7 +5133,7 @@
         },
         "outputId": "e9d14e37-4c49-48a7-be38-0712061f9cc7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5185,7 +5185,7 @@
         },
         "outputId": "0ac8ee61-dacc-4626-ee46-d9dff91327ce"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5216,7 +5216,7 @@
         "\n",
         "*   uma pdf com um sinal e uma componente de fundo\n",
         "*   número esperado de eventos considerados da likelihood (ajuste estendido)\n",
-        "*   construção de modelos, geração de brinquedos, montagem e plotagem\n",
+        "*   construção de modelos, geração de data toy, montagem e plotagem\n",
         "*   mesmo que o conjunto de dados esteja binado no gráfico, o o ajuste está unbinned\n",
         "\n",
         "\n",
@@ -5274,7 +5274,7 @@
           "height": 1000
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
