--- a/2024_01/RooFit/ROOTnoColab_Aula04Data2024_01_Exemplos5aML.ipynb
+++ b/2024_01/RooFit/ROOTnoColab_Aula04Data2024_01_Exemplos5aML.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMPjAtnYHu9kKNgXKrCKr+K",
+      "authorship_tag": "ABX9TyOqxcSPl6FHlV76sth+e3Dw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -5068,7 +5068,7 @@
         },
         "outputId": "6849dc1c-c3fc-4885-a082-fe6addadfec6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5133,7 +5133,7 @@
         },
         "outputId": "0f92421f-99e4-44d9-fba4-9ad95a912b05"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5185,7 +5185,7 @@
         },
         "outputId": "0702d8bb-e708-4024-884a-60b657dcf438"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5215,8 +5215,8 @@
         "\n",
         "\n",
         "*   uma pdf com um sinal e uma componente de fundo\n",
-        "*   construção de modelos, geração de brinquedos, montagem e plotagem\n",
-        "*   mesmo que o conjunto de dados esteja binado no gráfico, o o ajuste está unbinned\n",
+        "*   construção de modelos, geração de dados (toy), combinação e plotagem\n",
+        "*   mesmo que o conjunto de dados esteja binado no gráfico, o ajuste está unbinned\n",
         "\n",
         "\n",
         "\n"
@@ -5279,7 +5279,7 @@
         },
         "outputId": "15e25762-2f29-4667-a4c9-fb0d66f3b5dd"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
